misc: remove theme widget overflow fix
PR: https://github.com/opnsense/core/issues/2747

--- a/misc/theme-cicada/src/opnsense/www/themes/cicada/assets/stylesheets/main.scss
+++ b/misc/theme-cicada/src/opnsense/www/themes/cicada/assets/stylesheets/main.scss
@@ -9519,10 +9519,6 @@ label > input {
   background-color: #ec6d12;
 }
 
-.dashboard_grid_column table {
-  table-layout: fixed;
-}
-
 #ipsec {
   #ipsec-mobile, #ipsec-tunnel, #ipsec-overview {
     background-color: #393939;
