--- a/misc/theme-tukan/src/opnsense/www/themes/tukan/assets/stylesheets/main.scss
+++ b/misc/theme-tukan/src/opnsense/www/themes/tukan/assets/stylesheets/main.scss
@@ -9575,10 +9575,6 @@ label > input {
   background-color: #ffe83e;
 }
 
-.dashboard_grid_column table {
-  table-layout: fixed;
-}
-
 #ipsec {
   #ipsec-mobile, #ipsec-tunnel, #ipsec-overview {
     background-color: #f0f0f0;
